reaplaced golden helmet with crown

--- a/assets/minecraft/lang/en_OC.lang
+++ b/assets/minecraft/lang/en_OC.lang
@@ -927,7 +927,7 @@ item.helmetDiamond.name=Diamond Helmet
 item.chestplateDiamond.name=Diamond Chestplate
 item.leggingsDiamond.name=Diamond Leggings
 item.bootsDiamond.name=Diamond Boots
-item.helmetGold.name=Golden Helmet
+item.helmetGold.name=Crown
 item.chestplateGold.name=Golden Chestplate
 item.leggingsGold.name=Golden Leggings
 item.bootsGold.name=Golden Boots
